Overview of changes from 1.4.0-alpha to 1.4.0-beta
==
* Fixed
  - XIM bridge
    - Startup error of uim-xim due to the 1.3.x-incompatible behavior of
      uim_scm_symbol_value()

  - libuim
    - Fix corrupted return value by uim_scm_return_value() after uim_scm_eval()

  - uim-sh
    - Fix broken 'uim-sh -B' error handling
    - Fix broken backtrace printing

  - Broken compilation on SPARC and IA-64 (NIIBE Yutaka)
  - Suppress warnings

Overview of changes from 1.3.x to 1.4.0-alpha
==
* New features
  - libuim
    - The modified version of SIOD interpreter has been replaced with SigScheme
      0.7.2

* Fixed
  - [CRITICAL] Fix GC crash on SPARC, IA-64, m68k, and possibly MIPS, Alpha, by
    introduction of libgcroots

Overview of changes from 1.3.0 to 1.3.1
==
* Fixes
  - SKK
    - Fix specific key handling in wide-latin direct input mode

  - uim-pref-qt
    - Fix compilation on non-immodule version of Qt3

* Others
  - uim-toolbar-{gtk,gtk-systray,applet}
    - Avoid potential misbehavior in property activation by popup menu
  - uim_panelapplet
    - Improve layout upon resize of the KDE panel
  - uim-candwin-qt
    - Handle disconnect from uim-xim sanely

Overview of changes from 1.3.0-beta to 1.3.0
==
* Fixed
  - XIM bridge
    - Fix compilation on pre-X11R6.7 environment.

Overview of changes from 1.3.0-alpha to 1.3.0-beta
==
* Fixed
  - libuim
    - Minor fix for text acquisition and injection
    - Add caps-lock, scroll-lock, and num-lock keysyms

  - Tcode
  - Try-code
    - Update compose table

  - uim-toolbar-qt
    - Suppress runtime warning when icon files are missing

  - GTK+ bridge
  - Qt bridge
  - XIM bridge
    - Support caps-lock, scroll-lock, and num-lock keysyms
    - Fix page shift behavior

Overview of changes from 1.2.x to 1.3.0-alpha
==
* New features
  - libuim
    - Obsolete experimental surrounding text API
    - Add text acquisition API and support it in GTK+ and Qt bridges
    - Add text injection API (uim_input_string())