@@ -42,18 +42,16 @@
 ;; SIOD compatibility for SigScheme
 (if (not (symbol-bound? 'allocate-heap))
     (define allocate-heap
-      (lambda args
-        #f)))
+      (lambda ()
+        (%%prealloc-heaps 0))))
 
 ;; Performance tuning for heavy job such as custom.scm. The value 64
-;; allocates approximately 12MB of heaps. Reduce it for less-memory
+;; allocates approximately 8MB of heaps. Reduce it for less-memory
 ;; environment (by redefining the proc in ~/.uim or default.scm).
-;;   -- YamaKen 2005-02-01
+;;   -- YamaKen 2005-02-01, 2007-01-08
 (define prealloc-heaps-for-heavy-job
   (lambda ()
-    (for-each (lambda (i)
-		(allocate-heap))
-	      (iota 64))))
+    (%%prealloc-heaps 64)))
 
 (define load-user-conf
   (lambda ()
